Fix #114657: Color attribute from applied GN modifier not active

Originally caused by 6514bb05ea.

One more cases where the active/default color attributes were not set
correctly was when a geometry nodes modifier was applied that was
storing named color attribute(s) [and that results in an color attribute
where previously none existed].

In this case, make the fist color attribute found active/default.

Similar to acfafeed88ee.